init symfony skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-/nbproject/*
+
+###> symfony/framework-bundle ###
+/.env
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+/nbproject
