optimize db layer - set doctrine to use cache driver

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -29,3 +29,4 @@ doctrine:
                 alias: App
         metadata_cache_driver: apcu
         query_cache_driver: apcu
+        result_cache_driver: apcu
