--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env
 /public/bundles/
@@ -10,3 +9,4 @@
 .phpunit
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+.idea
