update phpunit test

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /nbproject
 .idea
 composer.phar
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
