--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "symfony/phpunit-bridge": "^5.0"
     },
     "config": {
         "platform": {
